--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,8 @@ jobs:
       - name: filesName
         run: node utils/main.js
 
-        # Deploy to another repo
-      - name: Deploy
-        uses: s0/git-publish-subdir-action@develop
+      # Deploy
+      - name: run deploy.sh
         env:
-          REPO: git@github.com:ckhr516/ckhr516.github.io.git
-          BRANCH: main
-          FOLDER: utils/filesName
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        run: bash utils/deploy.sh
