--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,6 @@ jobs:
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
           repository-name: ckhr516/ckhr516.github.io
-          branch: test # 部署到的分支
+          branch: main # 部署到的分支
           folder: utils/json # vuepress 生成的静态文件存放的地方
+          target-folder: utils/blogimg/filesName.json
